--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
     <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="./assets/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-<div>
-    <h1>Welcome To Bootstrap</h1>
-    <p>Lets Starts Learning Bootstrap</p>
-</div>
+    <!-- container
+    container-fluid -->
+    <div class="container p50">
+        <!-- <div class="row"></div> -->
+        <h1>Welcome To Bootstrap</h1>
+        <p>Lets Starts Learning Bootstrap</p>
+    </div>
 
     <!-- Bootstrap JS-->
     <script src="./assets/js/jquery.min.js"></script>
