--- a/index.html
+++ b/index.html
@@ -7,16 +7,49 @@
     <title>Bootstrap</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./style.css"> 
+<!-- Bootstrap CDN-->
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> -->
+
 </head>
+
 <body>
     <!-- container
     container-fluid -->
-    <div class="container p50">
+    <div class="container p50" >
         <!-- <div class="row"></div> -->
         <h1>Welcome To Bootstrap</h1>
         <p>Lets Starts Learning Bootstrap</p>
     </div>
+    <div class="container color-1 height-500">
+        <h4>Bootstrap Grids</h4>
+        <p>Learn basic layouts.</p>
+
+        <!-- Layout -->
+        <div class="grid-color container">
+            <!-- 12 Column Grid -->
+            <!-- Row -->
+            <div class="row">
+                <div class="col-md bg"> Row 1 Col 1 </div>
+                <div class="col-md bg"> Row 1 Col 2 </div>
+                <div class="col-md col-sm-6 bg"> Row 1 Col 3 (Email)</div>
+                <div class="col-md col-sm-6 bg"> Row 1 Col 4 (Number)</div> 
+                <!-- <div class="col bg"> Row 1 Col 3 (Email)</div>
+                <div class="col bg"> Row 1 Col 4 (Number)</div>  -->
+            </div>
+            <div class="row">
+                <div class="col-4 bg"> Row 3 Col 1 </div>
+                <div class="col-4 bg"> Row 3 Col 2 </div>
+                <div class="col-4 bg"> Row 3 Col 3 </div>
+                
+            </div>
+        </div>
+        <!-- End Layouts -->
+    </div>
+    
 
     <!-- Bootstrap JS-->
     <script src="./assets/js/jquery.min.js"></script>
